demo/modresorts10war.ear_migrationBundle-demo_ready/deploy/k8s/deployment.yaml
# Generated by IBM TransformationAdvisor
# Thu Mar 14 17:57:11 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modresorts10war
  name: modresorts10war
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modresorts10war
  template:
    metadata:
      labels:
        app: modresorts10war
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: modresorts10war
          ports:
            - containerPort: 9080
              protocol: TCP
