demo/modresorts10war.ear_migrationBundle-demo_ready/deploy/k8s/route.yaml
# Generated by IBM TransformationAdvisor
# Thu Mar 14 17:57:11 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: modresorts10war
  name: modresorts10war
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: modresorts10war
    weight: 100
